2000-06-03  Ariel Rios  <ariel@arcavia.com>

	* table.c: New file: Functions for creating and using the table
	dialog.
	(set_get_values): Set and get the table value arguments.
	(button_table_cb): Call back for the table dialog.
	(gtk_html_table_dialog_new): Creates a new GtkHTMLDialog.
	(gtk_html_link_dialog_destroy): Destroy the dialog.
	(table_insert): Insert table.
	(table_edit): Edit table.

	* table.h: Ditto.

2000-05-29  Larry Ewing  <lewing@helixcode.com>

	* persist-stream-impl.c (get_content_types): add test/plain to
	content type list.
	(save): save the requested content type.

2000-05-26  Dan Winship  <danw@helixcode.com>

	* test-html-editor-control.c (load_through_stream,
	save_through_stream):
	* persist-stream-impl.c (save_receiver, save, load,
	get_content_types): Update for PersistStream changes.

2000-05-21  Ettore Perazzoli  <ettore@helixcode.com>

	* persist-stream-impl.c (load): Updated to use `GtkHTMLStream *'
	instead of `GtkHTMLStreamHandle'.
	(load): Updated to use the new `gtk_html_begin()' with no @url.

2000-05-17  Ettore Perazzoli  <ettore@helixcode.com>

	* toolbar.c
	(editor_toolbar_left_align_cb): If the button is now inactive,
	don't do anything, because it means that the user has clicked on
	another button in the same radiogroup.
	(editor_toolbar_center_cb): Likewise.
	(editor_toolbar_right_align_cb): Likewise.
	(safe_set_active): New helper function to set a toggle button
	active without triggering the corresponding callback.
	(paragraph_alignment_changed_cb): Use it to update the buttons.
	This way we don't get a callback every time the current alignment
	changes.

2000-05-16  Larry Ewing  <lewing@helixcode.com>

	* image.c (insert): renamed html_image_set_filename to html_image_set_url.

2000-05-09  Ettore Perazzoli  <ettore@helixcode.com>

	* test-html-editor-control.c: #if 0 the unused toolbar
	GnomeUIInfo.

2000-05-08  Larry Ewing  <lewing@helixcode.com>

	* editor-control-factory.c (editor_control_factory_init): call